# rust-lambda

./: Cargo.toml  README.md  test.txt
examples/: test0.txt
src/: ast.rs  eval.rs  lam.pest  main.rs  parse.rs  secd.rs
